--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,8 @@ dependencies:
   bloc: ^8.1.2
   oktoast: ^3.3.1
   infinite_scroll_pagination: ^4.0.0
-
+  sqflite:
+  path:
 dev_dependencies:
   flutter_test:
     sdk: flutter
